# godot-iroh-gossip-example

./: .gitignore  README.md
godot/: .gdextension.uid  async_event_bus.tscn  chat.gdextension  chat.gdextension.uid  export_presets.cfg  project.godot  test_scene.gd  test_scene.gd.uid  test_scene.tscn
rust/: Cargo.toml
rust/src/: async_event_bus.rs  async_runtime.rs  async_singleton.rs  bootstrap_editor_plugin.rs  lib.rs  player.rs
