[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "b9ae6b317a26ec035bfeedce71d42f111b30aaf6", features = ["api-4-4"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "time", "sync"] }
